fixed the style in the blog section and did some changes like color decoration gap margin etc

--- a/style.css
+++ b/style.css
@@ -468,5 +468,15 @@ margin-top: 40px;
     object-fit: cover;
 }
 .our-blogs-words{
-    padding: 7%;
+    padding: 5%;
+}
+.bloger-attributes {
+    color: #28afa1;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+.our-blogs .p-and-icon{
+    margin-top: 4%;
 }
